Archive2/18/344cd1b8364466/output
main.cpp:27:3: error: call to 'foo' is ambiguous
  foo ([] (func_type f) {});
  ^~~
main.cpp:16:6: note: candidate function [with Handler = (lambda at main.cpp:27:8)]
void foo (Handler h,
     ^
main.cpp:21:6: note: candidate function [with Handler = (lambda at main.cpp:27:8)]
void foo (Handler h,
     ^
1 error generated.
